--- a/css/mypage/mypage.css
+++ b/css/mypage/mypage.css
@@ -37,13 +37,14 @@
 .divide {
   display: flex;
   flex-direction: row;
-  justify-content: space-around;
+  justify-content: center;
 }
 
 .v-line {
   border-left: 1px solid white;
   height: 60px;
   margin: 10px;
+  margin-left: 80px;
   align-self: center;
 }
 .v1-line {
@@ -60,21 +61,22 @@
 .profile-main {
   display: flex;
   flex-direction: row;
-  justify-content: space-around;
+  justify-content: flex-start;
 }
 .profile-name {
-  font-size: 30px;
+  font-size: 40px;
   font-weight: bold;
-  margin: 10px;
+  margin-bottom: 10px;
+  margin-top: 100px;
 }
 .profile-body {
-  font-size: 15px;
+  font-size: 20px;
   display: flex;
   flex-direction: row;
-  justify-content: space-around;
+  justify-content: flex-start;
 }
 .profile-body p {
-  margin: 10px;
+  margin: 20px;
 }
 
 .profile-body img {
@@ -83,6 +85,17 @@
   margin: 10px;
 }
 .profile-main-image img {
-  width: 20%;
-  height: 20%;
+  width: 270px;
+  height: 270px;
+  margin: 100px;
+  margin-right: 130px;
+}
+#EA {
+  color: #ca1a5a;
+}
+.ReservationMange-go {
+  font-size: 10px;
+  color: blue;
+  display: flex;
+  justify-content: flex-end;
 }
