--- a/css/mypage/mypage.css
+++ b/css/mypage/mypage.css
@@ -182,3 +182,11 @@
   font-size: 20px;
   font-weight: bold;
 }
+table,
+th,
+td {
+  border: 2px solid black;
+}
+table {
+  border-collapse: collapse;
+}
