feat : [FE] 공통 footer, header 완성

--- a/components/footer/footer.html
+++ b/components/footer/footer.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>wedder</title>
-        <link rel="stylesheet" href="./footer.css" />
+        <title>Wedder</title>
+        <link rel="stylesheet" href="/css/common/footer/footer.css" />
     </head>
     <footer>
         <div class="footer_inner">
