--- a/components/header/header.html
+++ b/components/header/header.html
@@ -3,10 +3,11 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>wedder2</title>
-        <link rel="stylesheet" href="./header.css" />
-        <link rel="stylesheet" href="../../css/common/reset.css" />
+        <title>Wedder</title>
+        <link rel="stylesheet" href="/css/common/header/header.css" />
+        <link rel="stylesheet" href="/css/common/reset.css" />
         <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <!-- 헤더 타이틀 글씨 한정 -->
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <link
             href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap"
@@ -30,7 +31,7 @@
                 </ul>
             </div>
             <!-- 네비게이션 바 -->
-            <div class="header-cate hd__inner1100">
+            <nav class="header-cate hd__inner1400">
                 <ul>
                     <li class="black">Home</li>
                     <li class="black">Weeding Hall</li>
@@ -44,7 +45,7 @@
                     <li class="grey">Review</li>
                     <li class="grey">Event</li>
                 </ul>
-            </div>
+            </nav>
         </div>
     </header>
 </html>
