--- a/css/common/reset.css
+++ b/css/common/reset.css
@@ -88,7 +88,7 @@ video {
     padding: 0;
     border: 0;
     font-size: 100%;
-    font-family: "IBM";
+    font-family: "Roboto", sans-serif;
     vertical-align: baseline;
 }
 
@@ -111,38 +111,22 @@ section {
     display: block;
 } */
 
-@font-face {
-    font-family: "han";
-    src: url("../../font/한수원_한울림_R.ttf") format("truetype");
-}
-@font-face {
-    font-family: "IBM-B";
-    src: url("../../font/IBMPlexSansKR-Bold.ttf") format("truetype");
-}
-
-@font-face {
-    font-family: "IBM";
-    src: url("../../font/IBMPlexSansKR-Regular.ttf") format("truetype");
-}
-
-/*@font-face {*/
-/*    font-family: 'l-life-bold';*/
-/*    src: url(../../font/Happiness-Sans-Print-Bold.ttf) format('truetype');*/
-/*}*/
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap");
 
 html,
 body {
     min-height: 100vh;
     min-width: 1480px;
     height: 100vh;
-    font-family: "IBM";
+    font-family: "Roboto", sans-serif;
 }
 
 body {
     margin-top: 170px;
 }
+
 body > * {
-    font-family: "han" !important;
+    font-family: "Roboto", sans-serif;
 }
 
 @media screen and (min-width: 1200px) {
