feat : [FE] Wedder 메인페이지 1차 완성

--- a/css/common/header/header.css
+++ b/css/common/header/header.css
@@ -71,6 +71,10 @@ header {
     padding-top: 35px;
 }
 
+.header-cate a {
+    text-decoration: none;
+}
+
 .header-cate li:not(:last-of-type) {
     list-style-type: none;
     font-size: 17px;
@@ -83,5 +87,4 @@ header {
 
 .header-cate .grey {
     color: gray;
-    font-size: 20px;
 }
