--- a/components/header/header.html
+++ b/components/header/header.html
@@ -18,7 +18,7 @@
         <div class="header-container">
             <div class="header-top hd__inner1400">
                 <div class="header-logo">
-                    <a href="#">
+                    <a href="/html/main/main.html">
                         <img src="../../assets/images/wedder-logo.png" />
                     </a>
                     <span>Wedder</span>
@@ -33,14 +33,18 @@
             <!-- 네비게이션 바 -->
             <nav class="header-cate hd__inner1400">
                 <ul>
-                    <li class="black">Home</li>
-                    <li class="black">Weeding Hall</li>
-                    <li class="black">Studio</li>
-                    <li class="black">Dress</li>
-                    <li class="black">Make Up</li>
-                    <li class="black">Package</li>
-                    <li class="black">Estimate</li>
-                    <li class="black">Reservation</li>
+                    <li class="black">
+                        <a href="/html/main/main.html">Home</a>
+                    </li>
+                    <li class="black">
+                        <a href="/html/weddingHall/weddingHallList.html">Wedding Hall</a>
+                    </li>
+                    <li class="black"><a href="/html/weddingHall/weddingHallList.html">Studio</li>
+                    <li class="black"><a href="#">Dress</a></li>
+                    <li class="black"><a href="#">Make Up</a></li>
+                    <li class="black"><a href="#">Package</a></li>
+                    <li class="black"><a href="#">Estimate</a></li>
+                    <li class="black"><a href="#">Reservation</a></li>
                     <li>|</li>
                     <li class="grey">Review</li>
                     <li class="grey">Event</li>
