minus reset.css

--- a/css/mypage/mypage.css
+++ b/css/mypage/mypage.css
@@ -113,10 +113,10 @@
   border: 2px solid rgb(94, 94, 94);
   border-radius: 4px;
   background-color: #fcfcfc;
-  font-weight: 400;
+  font-weight: 100px;
   color: rgb(124, 124, 124);
   padding: 12px;
-  width: 240px;
+  width: 120px;
   text-align: left;
   cursor: pointer;
   font-size: 12px;
@@ -161,16 +161,25 @@
   height: 20px;
 }
 
+.visit-plan table #today-vs-plan-table {
+  border-spacing: 10px;
+}
+
 /* ------- */
 .table {
   display: flex;
   flex-direction: row;
   justify-content: flex-start;
+  margin: 20px;
 }
 .table img {
-  width: 150px;
-  height: 150px;
+  width: 100px;
+  height: 100px;
   margin-left: 80px;
+}
+.table div .img {
+  width: 50px;
+  height: 50px;
 }
 .table-divide {
   display: grid;
@@ -189,4 +198,8 @@ td {
 }
 table {
   border-collapse: collapse;
+}
+
+.material-symbols-outlined {
+  font-variation-settings: "FILL" 0, "wght" 400, "GRAD" 0, "opsz" 24;
 }
