fix:[FE] setting.json:5500 과 header,footer css 읽지 못함  경로 변경으로 해결

--- a/components/header/header.html
+++ b/components/header/header.html
@@ -4,8 +4,8 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Wedder</title>
-        <link rel="stylesheet" href="/css/common/header/header.css" />
-        <link rel="stylesheet" href="/css/common/reset.css" />
+        <link rel="stylesheet" href="../../css/common/header/header.css" />
+        <link rel="stylesheet" href="../../css/common/reset.css" />
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <!-- 헤더 타이틀 글씨 한정 -->
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
