--- a/css/reservation/Reservation-category.css
+++ b/css/reservation/Reservation-category.css
@@ -1,16 +1,3 @@
-@charset "utf-8";
-
-body {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Roboto';
-}
-
-/* #category {
-    margin: auto 10vw;
-} */
-
 /* 타이틀 */
 .title {
     text-align: left;
@@ -112,7 +99,7 @@ body {
     grid-template-columns: repeat(2, 1fr);
     grid-column-gap: 50px;
     grid-row-gap: 30px;
-    margin: 20px 75px;
+    margin: 50px 75px;
 }
 
 .category {
@@ -133,7 +120,14 @@ body {
 .category-text {
     font-size: 40px;
     position: absolute;
-    top: 72%;
+    bottom: 45px;
+    left: 10%;
+}
+
+.category-text2 {
+    font-size: 40px;
+    position: absolute;
+    bottom: 30px;
     left: 10%;
 }
 
