--- a/css/reservation/Reservation-category.css
+++ b/css/reservation/Reservation-category.css
@@ -1,19 +1,18 @@
 /* 타이틀 */
 .title {
     text-align: left;
-    color: #CA1A5A;
+    color: #ca1a5a;
 }
 
 .title-sub {
-    font-size: 13px;
+    font-size: 16px;
     font-weight: normal;
     letter-spacing: -0.5px;
-    margin-top: 50px;
     margin-bottom: 5px;
 }
 
 .title-main {
-    font-size: 25px;
+    font-size: 24px;
     font-weight: bold;
     margin-top: 0;
     margin-bottom: 20px;
@@ -24,10 +23,8 @@
     font-size: 13px;
     display: flex;
     justify-content: space-between;
-    /* align-items: center; */
     align-content: space-between;
     width: 100%;
-    /* margin: 50px auto; */
 }
 
 .step {
@@ -59,7 +56,6 @@
     transform: translateY(-50%);
     border-top: 20px solid transparent;
     border-bottom: 20px solid transparent;
-    /* border-left: 20px solid #f1f1f1; */
     z-index: 2;
 }
 
@@ -103,12 +99,10 @@
 }
 
 .category {
-   /* width: 25vw;
-   height: 45vh; */
-   width: 400px;
-   height: 450px;
-   margin: 0;
-   position: relative;
+    width: 400px;
+    height: 450px;
+    margin: 0;
+    position: relative;
 }
 
 .category img {
@@ -131,7 +125,7 @@
     left: 10%;
 }
 
-.category:nth-of-type(1){
+.category:nth-of-type(1) {
     color: #fff;
 }
 
