--- a/css/common/header/header.css
+++ b/css/common/header/header.css
@@ -6,7 +6,7 @@ header {
     top: 0;
     z-index: 100000;
     background-color: white;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    border-bottom: 1px solid #d4d4d4 !important;
 }
 
 .header-container {
