--- a/css/common/reset.css
+++ b/css/common/reset.css
@@ -122,7 +122,7 @@ body {
 body {
     display: flex;
     flex-direction: column;
-    margin-top: 180px;
+    margin-top: 190px;
 }
 
 body > * {
@@ -131,6 +131,10 @@ body > * {
 
 a {
     text-decoration: none;
+}
+
+button {
+    background-color: transparent;
 }
 
 @media screen and (min-width: 1200px) {
