--- a/css/main/main.css
+++ b/css/main/main.css
@@ -26,27 +26,29 @@ p {
     background: linear-gradient(
             to top,
             rgba(255, 255, 255, 0) 10%,
-            rgba(255, 255, 255, 0.4) 25%,
-            rgba(255, 255, 255, 0.55) 50%,
+            rgba(255, 255, 255, 0.3) 25%,
+            rgba(255, 255, 255, 0.5) 50%,
             rgba(255, 255, 255, 0.75) 75%,
             rgb(255, 255, 255) 100%
         ),
         url(../../assets/images/main0.png) no-repeat center center/cover;
     color: white;
     text-align: center;
-    height: calc(100vh - 170px);
+    height: calc(100vh - 180px);
     display: flex;
     justify-content: center;
 }
 
 .main-content {
-    padding-top: 80px;
+    padding-top: 110px;
 }
 
 .main h1 {
     font-size: 50px;
     margin-bottom: 30px;
     color: black;
+    font-weight: 700;
+    line-height: 1.4;
 }
 
 .main h3 {
