--- a/css/weddingHall/mapViewWithFilters.css
+++ b/css/weddingHall/mapViewWithFilters.css
@@ -60,12 +60,38 @@
 
 .carousel-item-title {
     background-color: #dca9ba;
+
     font-size: 12px;
     color: white;
     padding: 20px;
     border-top-left-radius: 15px;
     border-top-right-radius: 15px;
 }
+
+.carousel-item-title {
+    font-size: 12px;
+    color: white;
+    padding: 20px;
+    border-top-left-radius: 15px;
+    border-top-right-radius: 15px;
+}
+
+.carousel-item:nth-child(4n + 1) .carousel-item-title {
+    background-color: #dca9ba;
+}
+
+.carousel-item:nth-child(4n + 2) .carousel-item-title {
+    background-color: #85aed4;
+}
+
+.carousel-item:nth-child(4n + 3) .carousel-item-title {
+    background-color: #65af83;
+}
+
+.carousel-item:nth-child(4n + 4) .carousel-item-title {
+    background-color: #8a8dd3;
+}
+
 .carousel-item-title h2 {
     font-size: 16px;
 }
