--- a/components/header/header.html
+++ b/components/header/header.html
@@ -19,7 +19,7 @@
             <div class="header-top hd__inner1400">
                 <div class="header-logo">
                     <a href="../../html/main/main.html">
-                        <img src="https://wdrtest1.s3.ap-northeast-2.amazonaws.com/common/wedder-logo.png" />
+                        <img src="https://wdrtest1.s3.ap-northeast-2.amazonaws.com/common/wedder-logo2.png" />
                     </a>
                     <span>Wedder</span>
                 </div>
