--- a/css/weddingHall/mapViewWithFilters.css
+++ b/css/weddingHall/mapViewWithFilters.css
@@ -40,7 +40,6 @@
 
 .slide-container {
     display: flex;
-    transition: transform 1.5s ease;
     overflow: hidden;
     padding-bottom: 10px;
 }
@@ -48,7 +47,6 @@
 .slide-inner {
     display: flex;
     width: 100%;
-    transform: translateX(0);
     transition: transform 1.5s ease;
 }
 
@@ -61,14 +59,6 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-}
-
-.slide-item-title {
-    font-size: 12px;
-    color: white;
-    padding: 20px;
-    border-top-left-radius: 15px;
-    border-top-right-radius: 15px;
 }
 
 .slide-item-title {
@@ -109,6 +99,7 @@
     width: 210px;
     height: 180px;
     margin: 15px auto;
+    object-fit: cover;
 }
 
 .slide-item-content {
@@ -131,7 +122,8 @@
 }
 
 .slide-button {
-    transform: translateY(-50%);
+    transform: translateY(-50%); /* 자신 높이의 -50%  */
+    top: 50%; /* 부모 요소의 50% 위치로 */
     cursor: pointer;
     border: none;
     position: absolute;
@@ -140,11 +132,9 @@
 
 .slide-button.right {
     right: -5%;
-    top: 50%;
 }
 
 .slide-button.left {
-    top: 50%;
     left: -5%;
 }
 
