feat : [FE] 웨딩홀 상세페이지 - 예식일정 현황  1차 완성

--- a/components/header/header.html
+++ b/components/header/header.html
@@ -42,8 +42,8 @@
                     <li class="black"><a href="../..//html/weddingHall/weddingHallList.html">Studio</li>
                     <li class="black"><a href="#">Dress</a></li>
                     <li class="black"><a href="#">Make Up</a></li>
-                    <li class="black"><a href="#">Package</a></li>
-                    <li class="black"><a href="#">Estimate</a></li>
+                    <li class="black"><a href="../../html/calculator/quoteCal.html">Package</a></li>
+                    <li class="black"><a href="../../html/reservation/reservationCategory.html">Estimate</a></li>
                     <li class="black"><a href="../../html/reservation/reservationCategory.html">Reservation</a></li>
                     <li>|</li>
                     <li class="grey">Review</li>
