--- a/css/weddingHall/weddingHallDetail.css
+++ b/css/weddingHall/weddingHallDetail.css
@@ -1,4 +1,5 @@
-.imforamtion {
+/* 2. 업체 정보 + 지도  */
+.information {
     position: relative;
     margin: 0 auto;
 }
@@ -61,8 +62,7 @@
     padding: 10px 30px;
 }
 .like-btn:hover {
-    background-color: #ff9ec2;
-    padding: 10px 30px;
+    background-color: #f4699c;
 }
 
 .list-btn {
@@ -72,5 +72,54 @@
 
 .list-btn:hover {
     background-color: #717171;
-    padding: 10px 36px;
+}
+
+/* 3. 예식일정 현황  */
+.schedule {
+    margin-top: 120px;
+}
+.schedule-container {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    margin: 30px 50px;
+}
+
+.calendar img {
+    width: 450px;
+    height: auto;
+}
+
+.schedule-choose {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    margin-top: 40px;
+}
+
+.time-list {
+    background-color: #eeeeee;
+    padding: 18px 25px;
+    margin: 10px 0;
+    border-radius: 5px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.time-list-selected {
+    background-color: rgba(255, 203, 222, 0.3);
+    color: #ca1a5a;
+    border: 1px solid #ca1a5a;
+}
+
+.schedule-button {
+    width: 100%;
+    border: none;
+    border-radius: 5px;
+    color: white;
+    background-color: #ca1a5a;
+    padding: 15px 30px;
+}
+
+.schedule-button:hover {
+    background-color: #f4699c;
 }
