--- a/css/package/packageMain.css
+++ b/css/package/packageMain.css
@@ -4,7 +4,7 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background-color: black; /* #f9f9f9;*/
+    background-color: #f9f9f9;
 }
 .banner {
     background-color: #F2DCE7;
@@ -69,6 +69,10 @@ body {
     grid-column-gap: 400px;
     margin-bottom: 40px;
 }
+.recommendation img {
+    width: 100px;
+    height: auto;
+}
 .recommendation {
     background-color: #fff;
     border-radius: 8px;
@@ -77,6 +81,7 @@ body {
     width: 400px;
     height: 250px;
     text-align: center;
+    
 }
 .circle {
     width: 30px;
@@ -100,6 +105,7 @@ body {
 }
 .recommendpar {
     color: #666;
+    font-size: 15px;
 }
 .steps {
     display: flex;
