--- a/css/mypage/mypage.css
+++ b/css/mypage/mypage.css
@@ -107,28 +107,39 @@
   justify-content: flex-end;
 }
 /* drop down 기능쪽 css */
-
+.dropdown {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  margin-right: 20px;
+}
 /* ------- */
 .table {
   display: flex;
   flex-direction: row;
   justify-content: flex-start;
-  margin: 20px;
+  margin: 20px 60px;
+  border: 1px solid #eeeeee;
+  width: 420px;
+  border-radius: 5%;
 }
 .table img {
   width: 100px;
   height: 100px;
-  margin-left: 80px;
+  border-radius: 7%;
+  margin: 10px;
 }
 .table div .img {
   width: 50px;
   height: 50px;
 }
+.table img.rate {
+  margin-top: 7px;
+}
 .table-divide {
   display: grid;
   grid-template-rows: 1fr 1fr;
   grid-template-columns: 1fr 1fr;
-  margin-top: 20px;
 }
 .table div :nth-of-type(1) {
   font-size: 20px;
@@ -137,7 +148,6 @@
 /*  */
 .table-VSplan {
   border-collapse: collapse;
-  border: 2px solid rgb(140 140 140);
   font-size: 1rem;
   letter-spacing: 5px;
   border-spacing: 300px;
@@ -146,7 +156,7 @@
   font-size: 1.3rem;
 }
 .table-VSplan thead {
-  background-color: #f5dcbc;
+  background-color: #eeeeee;
   color: black;
 }
 
@@ -154,6 +164,10 @@ th,
 td {
   width: 400px;
   text-align: center;
+  padding: 10px;
+}
+td {
+  font-size: 14px;
 }
 
 .material-symbols-outlined {
@@ -182,14 +196,18 @@ td {
 }
 .proposal-card {
   border: 1px solid rgb(158, 158, 158);
+  border-radius: 5%;
   margin: 10px;
-  width: 205px;
+  width: 200px;
+  height: 300px;
+}
+.proposal-card img {
+  margin: 10px;
+  width: 180px;
+  height: 180px;
 }
 .proposal-card div {
   display: inline-flex;
   flex-direction: row;
   justify-content: flex-start;
-}
-.Proposal img {
-  width: 200px;
 }
