style : [FE] 웨딩홀 상세페이지 - 슬라이드 JS까지  구현 완료

--- a/css/weddingHall/mapViewWithFilters.css
+++ b/css/weddingHall/mapViewWithFilters.css
@@ -121,6 +121,11 @@
     font-size: 13px;
 }
 
+.recommended-buttons {
+    display: flex;
+    justify-content: center;
+}
+
 .slide-button {
     transform: translateY(-50%); /* 자신 높이의 -50%  */
     top: 50%; /* 부모 요소의 50% 위치로 */
