--- a/css/login/Login.css
+++ b/css/login/Login.css
@@ -1,15 +1,6 @@
 @charset "utf-8";
 
-body{
-    font-style : Roboto;
-    font-size: 14px;
-}
 
-.header{
-    width: 100%;
-    height: 140px;
-    background: #191D23;
-}
 
 #Mylogo{
     position: relative;
@@ -17,7 +8,6 @@ body{
     left: 40% ; 
     top: 45%
 }
-
 
 
 /* 모양맞추기 */
@@ -32,47 +22,167 @@ body{
   transform: translate(-50%, -45%);
 }
 
+button{
+    cursor: pointer;
+}
+
+input[type=button]{
+    cursor: pointer;
+}
+
 #Enter{
     font-size: 15px;
+    margin: 0PX;
 }
 
 #Welcome{
     color: #64748B;
 }
 
-/*로그인 박스*/
-.Loging input{
+/*ID 박스*/
+.Loging #EmailID{
     width:430px;
     height: 30px;
     border-radius:4px;
 }
 
+
+/* 비밀번호을 잊어버렸습니까? 버튼 */
+#forgot{
+   display: none;
+   text-align: center;
+   background-color: white;
+   border: none;
+   color:#CA1A5A;
+   position: relative;
+   left: 255px;
+}
+
+
+.modal{
+    position:absolute;
+    display:none;
+    
+    justify-content: center;
+    top:0;
+    left:0;
+
+    width:100%;
+    height:100%;
+
+    
+
+    background-color: rgba(0,0,0,0.4);
+}
+.modal .modal_body{
+    position: absolute;
+    width: 500px;
+    height: 600px;
+    background-color: white;
+    text-align: center;
+    top : 10px;
+}
+
+.modal .modal_body #email{
+    
+    width: 300px;
+    height: 50px;
+    background-color: white;
+    text-align: center;
+    top : 10px;
+    margin-bottom: 20px;
+    border-radius: 4px;
+}
+
+.modal .modal_body #email:focus{
+    
+   
+    border: 1px solid #CA1A5A;
+    outline: none;
+    line-height: 20px;
+    
+}
+
+.modal .modal_body .checkPoint{
+    
+    width: 300px;
+    height: 50px;
+    background-color: #CA1A5A;
+    text-align: center;
+    top : 10px;
+    margin-bottom: 20px;
+    border-radius: 4px;
+    color: #fff;
+    border: none;
+
+}
+
+.modal .modal_body .checkTime{
+    
+    width: 300px;
+    height: 50px;
+    background-color: #fff;
+    text-align: center;
+    top : 10px;
+    margin-bottom: 20px;
+    border-radius: 4px;
+    color: #AFAFAF;
+    border: none;
+}
+
+
+/* 패스워드 눈 설정*/
+.Loging .passwordSet{
+    position: relative;
+    
+}
+
+
+.Loging .passwordSet #Password{
+   
+   width: 430px;
+   height: 30px;
+   border-radius:4px;
+}
+
+
+.Loging .passwordSet .btn{
+    position: absolute;
+    width: 20px;
+    height: 17px;
+    top: 0;
+    bottom: 0;
+    right: 20px;
+    margin: auto 0;
+    border-radius: 3px;
+    cursor: pointer;
+}
+
+
+/* 클릭 색 지정 */
 .Loging input:focus{
     border-color: #CA1A5A;
     outline: none;
-    
+   
 }
 
-
-
-
-
-#LoginButton{
-    color : #CA1A5A;
-}
-
-
-/* 로그인 확인 버튼 */
-.Continue input{
-    
-    color : white;
-    background-color: #CA1A5A;
-    border-color : white;
-    outline: none;
+/* 로그인 버튼 */
+#continue{
     width:430px;
     height: 40px;
+    background-color: #CA1A5A;
+    border:none;
+    color: #fff;
     border-radius:4px;
 }
+
+#LoginButton{
+    position: absolute;
+    color : #CA1A5A;
+    vertical-align: middle;
+}
+
+
 
 .ChangeButton button{
    background-color : white;
@@ -89,44 +199,9 @@ body{
    
 }
 
-/*sign*/
-.sign{
-    display: flex; /*박스*/
-    flex-basis: 20%;
-    align-items: center;
-    color: #4B5768;
-    font-size: 14px;
-    margin: 8px 0px;
 
-}
 
-/* 선발선 */
-.sign::before{
-    content: "";
-    flex-grow: 1;
-    background: rgba(0, 0, 0, 0.5);
-    height: 1px;
-    font-size: 0px;
-    line-height: 0px;
-    margin: 0px 25px;
-}
 
-/* 후발선 */
-.sign::after{
-    content: "";
-    flex-grow: 1;
-    background: rgba(0, 0, 0, 0.5);
-    height: 1px;
-    font-size: 0px;
-    line-height: 0px;
-    margin: 0px 25px;
-   
-}
-
-.ChangeButton .chg .Clogo{
-    margin: 1px;
-    
-}
 
 /*  체크 표시 */
 .check input[type="checkbox"]
@@ -155,7 +230,7 @@ body{
     left: 0;
     top:0;
     background-color: white;
-
+    vertical-align: middle;
 }
 
 .check input[type="checkbox"]:checked + label::before{
@@ -166,15 +241,64 @@ body{
 
 .Singup{
     text-align: center;
+    left: 50px;
+    margin-right: 70px; 
 }
 .Singup #LoginButton{
     text-decoration-line: none;
+    margin-left: 10px;
+}
+
+/*sign*/
+.sign{
+    display: flex; /*박스*/
+    flex-basis: 20%;
+    align-items: center;
+    color: #4B5768;
+    font-size: 14px;
+    right: 10px;
+    margin: 8px 0px;
+    
+}
+
+/* 선발선 */
+.sign::before{
+    content: "";
+    flex-grow: 1;
+    background: rgba(0, 0, 0, 0.5);
+    height: 1px;
+    font-size: 0px;
+    line-height: 0px;
+    margin: 0px 25px;
+}
+
+/* 후발선 */
+.sign::after{
+    content: "";
+    flex-grow: 1;
+    background: rgba(0, 0, 0, 0.5);
+    height: 1px;
+    font-size: 0px;
+    line-height: 0px;
+    margin: 0px 25px;
+   
+}
+
+.ChangeButton{
+    text-align: center;
+    vertical-align: middle;
+}
+
+.ChangeButton .chg .Clogo{
+    margin: 1px;
+    vertical-align: middle;
 }
 
 /* 법 */
-.law{
+.law button{
     font-size: 10px;
     text-align: center;
     transform: translate(-5%, 300%);
-    
+    background-color: white;
+    border: none;  
 }
