--- a/components/header/header.html
+++ b/components/header/header.html
@@ -13,6 +13,8 @@
             href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap"
             rel="stylesheet"
         />
+        <script defer src="../../js/header/header.js" ></script>
+
     </head>
     <header>
         <div class="header-container">
@@ -27,12 +29,13 @@
                     <li><a href="#">박혜원님 안녕하세요</a></li>
                     <li><a href="../../html/mypage/mypage.html">👩‍❤️‍👨My Page</a></li>
                     <li><a href="#">❤️My Like</a></li>
-                    <li><a href="#">🚪Log Out</a></li>
+                    <li><a href="#">Log Out</a></li>
                 </ul>
             </div>
             <!-- 네비게이션 바 -->
             <nav class="header-cate hd__inner1400">
                 <ul>
+                    <div id="horizontal-underline"></div>
                     <li class="black">
                         <a href="../../html/main/main.html">Home</a>
                     </li>
@@ -43,7 +46,7 @@
                     <li class="black"><a href="#">Dress</a></li>
                     <li class="black"><a href="#">Make Up</a></li>
                     <li class="black"><a href="../../html/calculator/quoteCal.html">Package</a></li>
-                    <li class="black"><a href="../../html/reservation/reservationCategory.html">Estimate</a></li>
+                    <li class="black"><a href="../../html/estimate/estimateCal.html">Estimate</a></li>
                     <li class="black"><a href="../../html/reservation/reservationCategory.html">Reservation</a></li>
                     <li>|</li>
                     <li class="grey">Review</li>
