--- a/css/common/header/header.css
+++ b/css/common/header/header.css
@@ -6,7 +6,7 @@ header {
     top: 0;
     z-index: 100000;
     background-color: white;
-    border-bottom: 1px solid #d4d4d4 !important;
+    /* border-bottom: 1px solid #d4d4d4 !important; */
 }
 
 .header-container {
@@ -55,11 +55,11 @@ header {
 }
 
 /* 네비게이션 바 */
-
 .header-cate ul {
     display: flex;
     justify-content: center;
     padding-top: 35px;
+    position: relative;
 }
 
 .header-cate li:not(:last-of-type) {
@@ -68,10 +68,15 @@ header {
     margin-right: 50px;
 }
 
-.header-cate li:hover {
-    color: #ca1a5a;
-}
-
 .header-cate .grey {
     color: gray;
+}
+
+#horizontal-underline {
+    position: absolute;
+    height: 2px;
+    border-radius: 2px;
+    transition: 0.5s;
+    background-color: #000000;
+    margin-top: 8px;
 }
