--- a/css/reservation/reservationCategory.css
+++ b/css/reservation/reservationCategory.css
@@ -1,17 +1,22 @@
 /* 타이틀 */
 .title {
     text-align: left;
-    color: #ca1a5a;
+    color: #CA1A5A;
 }
 
 .title-sub {
-    font-size: 17px;
+    font-size: 13px;
+    font-weight: normal;
+    letter-spacing: -0.5px;
+    margin-top: 50px;
+    margin-bottom: 5px;
 }
 
 .title-main {
-    font-size: 24px;
+    font-size: 25px;
     font-weight: bold;
-    margin: 8px 0 20px 0;
+    margin-top: 0;
+    margin-bottom: 20px;
 }
 
 /* 스텝 Bar */
@@ -19,8 +24,10 @@
     font-size: 13px;
     display: flex;
     justify-content: space-between;
+    /* align-items: center; */
     align-content: space-between;
     width: 100%;
+    /* margin: 50px auto; */
 }
 
 .step {
@@ -52,6 +59,7 @@
     transform: translateY(-50%);
     border-top: 20px solid transparent;
     border-bottom: 20px solid transparent;
+    /* border-left: 20px solid #f1f1f1; */
     z-index: 2;
 }
 
@@ -95,10 +103,12 @@
 }
 
 .category {
-    width: 400px;
-    height: 450px;
-    margin: 0;
-    position: relative;
+   /* width: 25vw;
+   height: 45vh; */
+   width: 400px;
+   height: 450px;
+   margin: 0;
+   position: relative;
 }
 
 .category img {
@@ -121,12 +131,12 @@
     left: 10%;
 }
 
-.category:nth-of-type(1) {
+.category:nth-of-type(1){
     color: #fff;
 }
 
 .category:nth-of-type(3) {
-    color: white;
+    color: #442400;
 }
 
 .category-btn {
