--- a/css/package/packageMain.css
+++ b/css/package/packageMain.css
@@ -1,43 +1,47 @@
-.banner {
-    background-color: rgba(202, 21, 165, 0.08);
-    padding: 200px;
+.slider-box {
+    height:75vh;
 }
-.content {
-    display: flex;
-    justify-content: center;
+.slider-box .swiper {
+    height:100%;
 }
-.banner h1 {
-    margin: 0;
-    font-size: 50px;
-    color: #333;
+.swiper > .swiper-wrapper > .swiper-slide:nth-child(odd) {
+    background-color: rgba(206, 26, 90, 0.15);
+}
+.swiper > .swiper-wrapper > .swiper-slide:nth-child(even) {
+    background-color: rgba(206, 26, 90, 0.15);
 }
 .paragraph {
     text-align: left;
+    margin: 170px 500px;
+}
+.title-bold {
+    font-size: 50px;
+    font-weight: bold;
 }
 .par1 {
-    margin: 30px 0px 20px;
+    margin: 20px 0px 20px;
     color: #666;
 }
 .par2 {
-    margin: 30px 0px 20px;
+    margin: 20px 0px 20px;
     color: #666;
 }
 .par2 span {
     color : red;
 }
 .par3 {
-    margin: 30px 0px 20px;
+    margin: 20px 0px 20px;
     color: #666;
 }
 .gift {
-    width: fit-content;
-    float: right;
+    position: fixed;
+    top: 155px;
+    right: 214px;
 }
 .coin {
-    width: fit-content;
-    position: relative;
-    left: 100px;
-    top: 150px;
+    position: fixed;
+    top: 292px;
+    right: 473px;
 }
 .midpar {
     font-size: 30px;
@@ -45,8 +49,12 @@
     padding: 100px;
     text-align: center;
 }
-.color {
+span.color {
     color: red;
+    vertical-align: text-bottom;
+}
+.button-list {
+    text-align: center;
 }
 .container {
     max-width: 1200px;
@@ -68,7 +76,8 @@
 .recommendation {
     background-color: #fff;
     border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0,0,0,0.1);
+    /* box-shadow: 0 0 10px rgba(0,0,0,0.1); */
+    border: 1px solid #000;
     padding: 10px;
     width: 400px;
     height: 250px;
@@ -76,19 +85,18 @@
     
 }
 .circle {
-    width: 30px;
-    height: 30px;
-    background-color: red;
+    width: 20px;
+    height: 20px;
+    background-color: #ca1a5a;
     border-radius: 50%;
     display: flex;
     justify-content: center;
     align-items: center;
     color: #ffffff;
-    font-size: 24px;
-    font-weight:bold;
+    font-size: 13px;
     position: relative;
-    left: 90px;
-    top: 30px;
+    left: 105px;
+    top: 24px;
 }
 .recommendation h2 {
     font-size: 18px;
@@ -109,6 +117,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    padding-top: 60px;
     padding-bottom: 30px;
     border-bottom: 1px solid #000;
 }
