--- a/css/reservation/ReservationCategory.css
+++ b/css/reservation/ReservationCategory.css
@@ -1,33 +1,26 @@
 /* 타이틀 */
 .title {
     text-align: left;
-    color: #CA1A5A;
+    color: #ca1a5a;
 }
 
 .title-sub {
-    font-size: 13px;
-    font-weight: normal;
-    letter-spacing: -0.5px;
-    margin-top: 50px;
-    margin-bottom: 5px;
+    font-size: 17px;
 }
 
 .title-main {
-    font-size: 25px;
+    font-size: 24px;
     font-weight: bold;
-    margin-top: 0;
-    margin-bottom: 20px;
+    margin: 8px 0 20px 0;
 }
 
 /* 스텝 Bar */
 .steps-bar {
-    font-size: 13px;
+    font-size: 14px;
     display: flex;
     justify-content: space-between;
-    /* align-items: center; */
     align-content: space-between;
     width: 100%;
-    /* margin: 50px auto; */
 }
 
 .step {
@@ -59,7 +52,6 @@
     transform: translateY(-50%);
     border-top: 20px solid transparent;
     border-bottom: 20px solid transparent;
-    /* border-left: 20px solid #f1f1f1; */
     z-index: 2;
 }
 
@@ -103,18 +95,17 @@
 }
 
 .category {
-   /* width: 25vw;
-   height: 45vh; */
-   width: 400px;
-   height: 450px;
-   margin: 0;
-   position: relative;
+    width: 450px;
+    height: 480px;
+    margin: 0;
+    position: relative;
 }
 
 .category img {
     width: 100%;
     height: 100%;
     z-index: 2;
+    box-shadow: 2px 2px 2px rgb(185, 185, 185);
 }
 
 .category-text {
@@ -131,7 +122,7 @@
     left: 10%;
 }
 
-.category:nth-of-type(1){
+.category:nth-of-type(1) {
     color: #fff;
 }
 
@@ -139,11 +130,9 @@
     color: #442400;
 }
 
-.category-btn {
-    width: 310px;
-    height: 40px;
+/* 다음 단계 버튼 */
+.btn {
     text-align: center;
-    background-color: #000;
     padding-top: 6px;
     margin-right: 124px;
     margin-bottom: 20px;
@@ -151,10 +140,17 @@
     float: right;
 }
 
-.category-nxt-btn {
+.btn-nxt {
     font-size: 13px;
     font-weight: bold;
+    padding: 10px 110px;
     color: #fff;
-    text-decoration-line: none;
+    background-color: #000;
+    border-radius: 5px;
     justify-content: flex-end;
+}
+
+.btn-nxt:hover {
+    background-color: #717171;
+    border: 1px solid #717171;
 }
