--- a/css/visitReservation/visitReserveDate.css
+++ b/css/visitReservation/visitReserveDate.css
@@ -37,7 +37,7 @@
 }
 
 /* 방문 일자 선택 */
-.reserve-container {
+.container {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     padding: 10px 20px;
@@ -58,6 +58,7 @@
 }
 
 .calendar-select {
+    width: 600px;
     font-size: 17px;
     font-weight: 500;
     padding: 12px;
@@ -75,7 +76,6 @@
     flex-direction: column;
     justify-content: space-between;
     margin: 20px 20px;
-    margin-left: 60px;
 }
 
 .reserve-guide {
