--- a/css/reservation/reservationSelectCompany.css
+++ b/css/reservation/reservationSelectCompany.css
@@ -113,6 +113,10 @@
 }
 
 /* 태그로 검색 */
+.tag-container {
+    /* display: none; */
+}
+
 .search-bar {
     position: relative;
     margin-bottom: 30px;
@@ -232,9 +236,7 @@
     width: 500px;
     height: 195px;
     margin: 0 10px;
-    border: 1px solid #000;
     box-shadow: 3px 3px 3px rgb(180, 180, 180);
-
 }
 
 .company-img img{
@@ -246,7 +248,7 @@
 .company-info {
     position: relative;
     width: 250px;
-    padding: 25px 10px;
+    padding: 15px 10px;
 }
 
 .company-info h2 {
@@ -259,11 +261,11 @@
     font-size: 13px;
     color: #667085;
     text-align: left;
-    padding: 10px 5px;
+    padding: 5px 5px;
 }
 
 .company-info h6 {
-    margin-top: 20px;
+    margin-top: 10px;
     font-size: 18px;
     font-weight: 400;
     text-align: left;
@@ -293,7 +295,7 @@
 
 /* 선택 목록 */
 .select-list {
-    margin: 60px 0;
+    margin: 30px 0;
     padding: 10px; 
     background-color: #fff;
     position: sticky;
@@ -309,7 +311,7 @@
 .select-title > h1 {
     font-size: 19px;
     font-weight: 600;
-    padding: 10px 17px;
+    padding: 5px 17px;
 }
 
 .options-container {
@@ -317,8 +319,8 @@
 }
 
 #company-images{
-    width: 180px;
-    height: 160px;
+    width: 110px;
+    height: 90px;
     margin: 10px 10px;
 }
 
